--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -6,4 +6,25 @@
 
 {% block content %}
 
+{% for o in some_list %}
+    <tr class="{% cycle 'row1' 'row2' %}">
+        ...
+    </tr>
+{% endfor %}
+
+<div class="row">
+  {% for product in data %}
+    <div class="col-md-3 rounded">
+      <div class="card rounded" style="width: 100%;">
+        <img class="card-img-top rounded-top product-image" width="" height="240px" src="{{ product.img_url }}" alt="Card image cap">
+        <div class="card-body rounded-bottom">
+          <a href="{% url 'product' product.pk %}" class="card-title product-title">{{ product.name }}</a>
+          <p class="card-text">R$ {{ product.price }}</p>
+          <a href="#" class="btn btn-primary w-100">Adicionar ao carrinho</a>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
+</div>
+
 {% endblock %}
