--- a/app/templates/app/cart.html
+++ b/app/templates/app/cart.html
@@ -6,10 +6,6 @@
 
 {% block content %}
 
-{{ user.is_superuser }}
-
-<div class="col-md-6">
-        <a href="/purchase" class="btn btn-primary w-100">Finalizar compra</a>
-</div>
+Cart page
 
 {% endblock %}
