--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -20,11 +20,32 @@
         <div class="card-body rounded-bottom">
           <a href="{% url 'product' product.pk %}" class="card-title product-title">{{ product.name }}</a>
           <p class="card-text">R$ {{ product.price }}</p>
-          <a href="#" class="btn btn-primary w-100">Adicionar ao carrinho</a>
+          <button value="{% url 'addToCart' product.pk %}" onclick='addToCart(this)' class="btn btn-primary w-100">Adicionar ao carrinho</button>
         </div>
       </div>
     </div>
   {% endfor %}
 </div>
+
+{% endblock %}
+
+{% block end_body_script %}
+
+<script type="text/javascript">
+
+addToCart = (objButton) => {
+  console.log("response")
+  axios.post(objButton.value)
+    .then((response) => {
+      console.log("response")
+      console.log(response)
+    })
+    .catch((error)=>{
+      console.log("error")
+      console.log(error)
+    })
+}
+
+</script>
 
 {% endblock %}
