--- a/app/templates/registration/auth_base.html
+++ b/app/templates/registration/auth_base.html
@@ -26,7 +26,7 @@
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <b>I3Data </b>| Gestão por eficiência
+    <b>Livraria virtual</b>
   </div>
   <!-- /.login-logo -->
   <div class="card">
